# axe-public

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TRADEMARKS.md
aurora_drv/: Cargo.toml  README.md
aurora_drv/src/: lib.rs
aurora_stub/: Cargo.toml
aurora_stub/src/: lib.rs
benchmarks/real8/: manifest.json
benchmarks/real8/src/: real8_net_dispatch.c  real8_net_framed.c  real8_net_router.c  real8_net_session.c  real8_net_triplet.c
benchmarks/real9/: manifest.json  stage_real9.ps1
docs/: real8-benchmark.md  real9-benchmark.md  unpack-capabilities.md  vuln-calibration.md
src/: anti_analysis.rs  api_hash.rs  archive_extract.rs  atomic_write.rs  attack.rs  behavior.rs  c_decompiler.rs  cfg.rs  cpp.rs  crypto.rs  dataflow.rs  debug_symbols.rs  decoder.rs  deobfuscation.rs  diff.rs  disasm.rs  dossier_cards.rs  dossiers.rs  driver_triage.rs  elf.rs  eval.rs  firmware_unpacker.rs  folder_scan.rs  functions.rs  image.rs  indirect_resolver.rs  ir.rs  jump_tables.rs  lib.rs  llm_artifacts.rs  macho.rs  native_emulator.rs  native_fuzzer.rs  pe.rs  portable.rs  pseudo_ir.rs  run_status.rs  second_pass.rs  semantic_index.rs  ssa.rs  (+13 more)
src/concolic/: backend.rs  expr.rs  fuzzer_bridge.rs  ladder.rs  llm_export.rs  lowering.rs  mod.rs  predicate.rs  pure_rust.rs  run_status.rs  scheduler.rs  session.rs  shadow_emulator.rs  shadow_state.rs  slicer.rs  smt2_backend.rs  smt2_emit.rs  validator.rs  z3_backend.rs
src/cpp_classes/: fact.rs  heuristic.rs  itanium_abi.rs  mod.rs  msvc_rtti.rs  names.rs  pdb_layout.rs  solver.rs  thunks.rs
src/dynamic_trace/: behavior_facts.rs  collector.rs  dyn_run_status.rs  etw.rs  event.rs  llm_pack.rs  mod.rs  normalize.rs  privilege.rs  session.rs  store.rs  symbolicate.rs
src/eh/: catch_resolver.rs  fact.rs  itanium.rs  lsda.rs  mod.rs  pe_fh3.rs  pe_fh4.rs  pe_seh.rs  pe_unwind.rs
src/facts/: claim.rs  confidence.rs  evidence.rs  mod.rs  provider.rs
src/fuzzer/: atomic_write.rs  corpus.rs  coverage.rs  crash.rs  executor.rs  harness.rs  llm_export.rs  mod.rs  mutators.rs  reachability.rs  run_status.rs  scheduler.rs  session.rs  sqlite_db.rs  staging.rs  symbols.rs  targets.rs
src/unpack/: anti_debug.rs  api_intercept.rs  breakpoints.rs  containment.rs  debug_loop.rs  disasm_snapshot.rs  entropy_curve.rs  guard_pages.rs  memory_map.rs  mod.rs  oep_detector.rs  packer_dispatch.rs  process_control.rs  region_buffer.rs  session.rs  snapshot.rs  snapshot_capture.rs  unpack_run_status.rs  write_log.rs
src/unpack/devirt/: mod.rs  themida.rs  themida3x.rs  trace.rs  unicorn_wrap.rs  vmprotect.rs
src/unpack/driver/: ioctl.rs  mod.rs  test_signing.rs  user_side.rs
src/unpack/hooks/: inject.rs  mod.rs  spoof_adapters.rs  spoof_firmware.rs  spoof_processes.rs  spoof_registry.rs  spoof_sysinfo.rs  stub_dll.rs
src/unpack/whp/: cpuid_spoof.rs  mod.rs  partition.rs  rdtsc_normalize.rs  vmexit.rs
src/vuln/: alias.rs  bug_class.rs  call_summaries.rs  concolic_query.rs  confirmation.rs  controlled_confirm.rs  dominator.rs  dynamic_attempt.rs  dynamic_evidence.rs  dynamic_orchestrator.rs  finding.rs  fuzz_bridge.rs  graph.rs  graph_builder.rs  guards.rs  harness_synth.rs  harness_verify.rs  llm_analyst.rs  llm_pack.rs  mod.rs  proof_packet.rs  query.rs  ranges.rs  reachability.rs  scoring.rs  session.rs  sinks.rs  sources.rs  taint.rs  trace_join.rs  vuln_run_status.rs
src/vuln/templates/: auth.rs  data_handling.rs  lifetime.rs  memory.rs  mod.rs
tests/: bench_cli.rs  concolic_external_unsat_gating.rs  concolic_promotion_transactional.rs  concolic_shadow_state.rs  concolic_smoke.rs  decompiler_golden.rs  devirt_e2e.rs  docs_capabilities_matrix.rs  dynamic_trace_etw_smoke.rs  dynamic_trace_manifest.rs  dynamic_trace_provider_probe.rs  dynamic_trace_smoke.rs  fuzzer_smoke.rs  multi_format.rs  real_5_ctf_smoke.rs  unpack_anti_anti_vm.rs  unpack_manifest.rs  unpack_memory_tracing.rs  unpack_phase1_smoke.rs  unpack_process_control.rs  unpack_smoke.rs  vuln_dynamic_confirmation.rs  vuln_harness_verify.rs  vuln_lifetime_candidates.rs  vuln_manifest.rs  vuln_proof_packets.rs  vuln_smoke.rs  vuln_template_coverage.rs
tests/fixtures/decompiler/: README.md  arg_passthrough_sysv.c.expected  calls_dense.c.expected  cmov_passthrough_or_keep.c.expected  decision_tree.c.expected  leaf_xor.c.expected  loop_inc_until_ten.c.expected  setcc_is_zero.c.expected  struct_access_two_offsets.c.expected  struct_read_then_write.c.expected  switch_three_case.c.expected
